--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+body {
+  background: linear-gradient(90deg, var(--Black) 50%, #151515 50%);
+}
 .container {
   height: 100vh;
   max-width: 1440px;
