--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,3 @@
-body {
-  background: linear-gradient(90deg, var(--Black) 50%, #151515 50%);
-}
 .container {
   height: 100vh;
   max-width: 1440px;
@@ -267,6 +264,10 @@ body {
   text-decoration-line: underline;
 }
 
+.container .bonding .detail-btn {
+  width: 100%;
+}
+
 .container .bonding .detail {
   color: var(--White);
   font-family: "Litheum Text";
@@ -289,6 +290,7 @@ body {
   gap: 8px;
   width: 561.203px;
   justify-content: center;
+  position: relative;
 }
 
 .box .boxes {
@@ -339,8 +341,7 @@ body {
 }
 
 .box .currency-box .first-content .amount {
-  /* color: var(--Beige); */
-  color: #000;
+  color: var(--Beige);
   font-family: "Litheum Title";
   font-size: 30px;
 
@@ -431,6 +432,11 @@ body {
   transition: all 0.5s;
 }
 
+.box .swap-btn:disabled {
+  background: #7a7d3d;
+  color: #525229;
+}
+
 .box .swap-btn:hover {
   background: #c5c3ae;
 }
@@ -488,6 +494,9 @@ body {
   height: 100vh;
   width: 100%;
   background: rgba(0, 0, 0, 0.7);
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
 
 .editing-popup {
@@ -503,6 +512,7 @@ body {
   background: var(--White);
   top: 30%;
   left: 10%;
+  display: none;
 }
 
 .editing-popup .percentage {
@@ -560,4 +570,54 @@ body {
   line-height: 110%; /* 13.2px */
   letter-spacing: 0.48px;
   text-transform: uppercase;
+}
+
+.token-popup {
+  width: 617.174px;
+  flex-shrink: 0;
+  border-radius: 33px;
+  border: 0.7px solid rgba(122, 125, 61, 0.5);
+  background: rgba(27, 27, 27, 0.7);
+  backdrop-filter: blur(13.399999618530273px);
+  padding: 65px 90px;
+  position: relative;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.token-popup .close-icon {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
+
+.token-popup .title {
+  color: var(--Beige);
+  font-family: "Litheum Title";
+  font-size: 34.043px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+  /* 37.447px */
+  margin-bottom: 31.88px;
+}
+
+.token-popup .graph {
+  width: 378.098px;
+  height: 395.836px;
+}
+
+.token-popup .fee {
+  color: var(--Beige);
+  font-family: "Litheum Text";
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+  /* 11px */
+  letter-spacing: 0.4px;
+  margin-top: 32.08px;
+  text-align: center;
 }
